--- a/index.html
+++ b/index.html
@@ -735,9 +735,17 @@ function cargarConsulta() {
             ${claves.map(clave => {
               // Comprobar y mostrar los valores de cada clave de los datos
               if (clave === "precioCompraUSDreal") {
-                // Obtener el valor de 'precioCompraUSDreal' desde el objeto 'item'
-                const precioCompraUSD = item["precioCompraUSDreal"] || '';  // Asegúrate de que 'precioCompraUSDreal' esté correcto en Firebase
-                return `<td class="px-4 py-2 border text-sm">${precioCompraUSD ? precioCompraUSD.toFixed(2) : ''}</td>`;
+                // Obtener el valor de 'precioCompraUSDreal'
+                const precioCompraUSD = item["precioCompraUSDreal"];
+                
+                // Verificar si es un número válido
+                const precioFormateado = !isNaN(precioCompraUSD) && precioCompraUSD !== '' 
+                  ? precioCompraUSD.toFixed(2)  // Si es un número válido, se formatea a 2 decimales
+                  : '';  // Si no es un número válido, se muestra una cadena vacía
+                
+                return `<td class="px-4 py-2 border text-sm">${precioFormateado}</td>`;
+              }
+
               } else if (clave === "tasaCambioVenta") {
                 // Mostrar "Por definir" si 'tasaCambioVenta' no existe
                 const tasaVenta = item["tasaCambioVenta"];
@@ -751,6 +759,10 @@ function cargarConsulta() {
                 return `<td class="px-4 py-2 border text-sm">${item[clave] ?? ''}</td>`;
               }
             }).join("")}
+            <td class="px-4 py-2 border text-center">
+              <button onclick="editarItem('${tipo}', '${key}')" class="text-blue-600 hover:underline">✏️</button>
+              <button onclick="eliminarItem('${tipo}', '${key}')" class="text-red-600 hover:underline ml-2">🗑️</button>
+            </td>
           </tr>
         `).join("")}
       </tbody>
