--- a/index.html
+++ b/index.html
@@ -735,16 +735,35 @@ function cargarConsulta() {
             ${claves.map(clave => {
               // Comprobar y mostrar los valores de cada clave de los datos
               if (clave === "precioCompraUSDreal") {
-                // Obtener el valor de 'precioCompraUSDreal'
-                const precioCompraUSD = item["precioCompraUSDreal"];
-                
-                // Verificar si es un número válido
-                const precioFormateado = !isNaN(precioCompraUSD) && precioCompraUSD !== '' 
-                  ? precioCompraUSD.toFixed(2)  // Si es un número válido, se formatea a 2 decimales
-                  : '';  // Si no es un número válido, se muestra una cadena vacía
-                
-                return `<td class="px-4 py-2 border text-sm">${precioFormateado}</td>`;
-              }
+  // Obtener el valor de 'precioCompraUSDreal'
+  const precioCompraUSD = item["precioCompraUSDreal"];
+  
+  // Verificar si es un string
+  let precioFormateado = '';
+
+  if (typeof precioCompraUSD === 'string') {
+    // Intentar convertir la cadena a un número
+    const parsedValue = parseFloat(precioCompraUSD);
+
+    if (!isNaN(parsedValue)) {
+      // Si la cadena representa un número válido, lo formateamos a 2 decimales
+      precioFormateado = parsedValue.toFixed(2);
+    } else {
+      // Si no es un número válido, mostramos un mensaje de error o 'No disponible'
+      precioFormateado = 'Valor no válido';
+    }
+  } else if (typeof precioCompraUSD === 'number' && !isNaN(precioCompraUSD)) {
+    // Si es un número, lo formateamos a 2 decimales
+    precioFormateado = precioCompraUSD.toFixed(2);
+  } else {
+    // Si no es un número ni un string, mostramos 'No disponible'
+    precioFormateado = 'No disponible';
+  }
+
+  // Devolvemos el valor formateado para mostrarlo en la tabla
+  return `<td class="px-4 py-2 border text-sm">${precioFormateado}</td>`;
+}
+
 
               } else if (clave === "tasaCambioVenta") {
                 // Mostrar "Por definir" si 'tasaCambioVenta' no existe
